--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "construct_interfaces",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
-  "scripts":{
-    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only ./src/main.ts",
     "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
