--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "construct-interfaces",
+  "name": "c3-interfaces",
   "version": "1.0.0",
   "description": "Construct 3 typescript interfaces for ease development on code editors like VSCode",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reinildo/construct-interfaces.git"
   },
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
+  "files": ["lib/**/*"],
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.3.2"
